--- a/sass/partials/_syntax.scss
+++ b/sass/partials/_syntax.scss
@@ -263,3 +263,7 @@ figure.code {
   text-shadow: #cbcccc 0 1px 0;
   padding-left: 3em;
 }
+
+.jsfiddle {
+  width: 60%;
+}
